# daniels-marketing

./: .env.example  .gitignore  install_deps.bat  pyproject.toml  requirements-dev.txt  requirements.txt  start_backend.bat  start_dashboard.bat
dashboard/: package-lock.json  package.json  vercel.json  vite.config.js
dashboard/src/: App.jsx  api.js  index.css
docs/: agent-specs.md  deployment-guide.md
docs/plans/: 2026-03-30-daniels-donuts-implementation-plan.md  2026-03-30-daniels-donuts-marketing-agent-design.md  2026-03-31-social-stats-design.md  2026-03-31-social-stats-implementation-plan.md  2026-04-01-dashboard-improvements-design.md  2026-04-02-brand-refresh-design.md  2026-04-02-overview-redesign-design.md
scripts/: backfill_social_history.py
src/: main.py
src/agents/: analytics.py  base.py  content.py  orchestrator.py  post_production.py  research.py  social.py  social_stats.py  strategy.py  website.py
src/api/: main.py
src/core/: ga4_client.py  higgsfield.py  meta_client.py  scheduler.py  tiktok_client.py  video_editor.py  wordpress_client.py
src/db/: database.py  models.py
tests/: conftest.py  test_agent_social_stats.py  test_agent_strategy.py  test_ga4_client.py  test_models.py  test_routes_ga4.py  test_routes_research.py  test_routes_social_analysis.py  test_routes_social_stats.py  test_scheduler.py  test_scraper_facebook.py  test_scraper_instagram.py  test_scraper_tiktok.py  test_social_models.py
tests/agents/: test_analytics.py  test_base.py  test_content.py  test_orchestrator.py  test_post_production.py  test_research.py  (+3 more)
(+22 files in other folders)
